# robokit

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  NOTES.md  README.md  package.json  platformio.ini
.cargo/: config
blinky/: Cargo.toml
blinky/src/: commands.rs  lib.rs  main.rs
docs/: dev.md  hardware.md  machine.md
gridbot-tahi/: Cargo.toml
gridbot-tahi/docs/: circuits.md  hardware.md
gridbot-tahi/src/: actuators.rs  commands.rs  lib.rs  main.rs
gridbot-tahi/tests/: integration.rs
include/: overload.hpp  overloaded.hpp  redux.hpp  store.hpp  variant.hpp
robokit/: Cargo.toml
robokit/src/: error.rs  lib.rs  machine.rs  robot.rs  runner.rs  scheduler.rs  timer.rs
robokit/src/actuators/: axis.rs  led.rs  mod.rs  spindle.rs
robokit/src/sensors/: mod.rs  switch.rs
src/: actor.rs  actuator.rs  command.rs  control.rs  error.rs  lib.rs  machine.rs  main.cpp  main.rs  modbus.rs  runner.rs  server.hpp  stepper-ramp.cpp  stepper-ramp.h  stepper-ramp.hpp  stepper.hpp  store.hpp  timer.hpp  timer.rs  util.rs
src/actuators/: axis.rs  led.rs  mod.rs  spindle.rs
src/effects/: bot.hpp  clock.hpp  context.hpp  leds.hpp  motors.hpp
src/models/: bot.hpp  clock.hpp  leds.hpp  motors.hpp
src/sensors/: mod.rs  switch.rs
src/util/: mod.rs  ref_mut.rs
test/: test-stepper-ramp.cpp  test_stepper.cpp
test/test-stepper-ramp/: test-stepper-ramp.cpp
tests/: integration.rs
tools/: cdata.js
ui/: index.html
