[package]
name = "gridbot"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
anyhow = { version = "1", default-features = false }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
defmt = "0.3"
defmt-rtt = "0.4"
embedded-alloc = "0.5"
embedded-hal = "0.2"
fugit = { version = "0.3", features = ["defmt"] }
fugit-timer = "0.1"
heapless = "0.7"
nb = "1"
num = { version = "0.4", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
ramp-maker = { version = "0.2", features = ["libm"] }
rmodbus = { version = "0.7", default-features = false, features = ["heapless"] }
stepper = { version = "0.6", features = ["dq542ma"] }
stm32f7 = { version = "0.15", features = ["stm32f7x7", "rt"] }
stm32f7xx-hal = { version = "0.7", features = ["stm32f767"] }

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 3 # <-
overflow-checks = false # <-
