[package]
name = "blinky"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robokit = { path = "../robokit" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
defmt = "0.3"
defmt-rtt = "0.4"
embedded-alloc = "0.5"
embedded-hal = "0.2"
fugit = { version = "0.3", features = ["defmt"] }
heapless = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f7 = { version = "0.15", features = ["stm32f7x7", "rt"] }
stm32f7xx-hal = { version = "0.7", features = ["stm32f767"] }
