[package]
name = "gridbot-tahi"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
robokit = { path = "../robokit" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
defmt = "0.3"
defmt-rtt = "0.4"
embedded-alloc = "0.5"
embedded-hal = "0.2"
fugit = { version = "0.3", features = ["defmt"] }
fugit-timer = "0.1"
heapless = "0.7"
nb = "1"
num = { version = "0.4", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
ramp-maker = { version = "0.2", features = ["libm"] }
rmodbus = { version = "0.7", default-features = false, features = ["heapless"] }
stepper = { version = "0.6", features = ["dq542ma"] }
stm32f7 = { version = "0.15", features = ["stm32f7x7", "rt"] }
stm32f7xx-hal = { version = "0.7", features = ["stm32f767"] }

[dev-dependencies]
defmt-test = "0.3"
