[package]
name = "gridbot-tahi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
robokit = { path = "../robokit" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
defmt = "0.3"
defmt-rtt = "0.4"
embedded-alloc = "0.5"
embedded-hal = "0.2"
fixed-map = { version = "0.8.2", default-features = false }
fugit = { version = "0.3", features = ["defmt"] }
heapless = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f7 = { version = "0.15", features = ["stm32f7x7", "rt"] }
stm32f7xx-hal = { version = "0.7", features = ["stm32f767"] }

[dev-dependencies]
defmt-test = "0.3"
