[package]
name = "robokit"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
embedded-hal = "0.2"
fugit = { version = "0.3", features = ["defmt"] }
fugit-timer = "0.1"
heapless = "0.7"
nb = "1"
num = { version = "0.4", default-features = false }
ramp-maker = { version = "0.2", features = ["libm"] }
rmodbus = { version = "0.7", default-features = false, features = ["heapless"] }
stepper = { version = "0.6", features = ["dq542ma"] }

[dev-dependencies]
defmt-test = "0.3"
