[package]
name = "robokit"
version = "0.2.0"
edition = "2021"
authors = ["Michael Williams <hello@mikey.nz>"]
description = "Build custom firmware for simple robotic automation"
license = "Apache-2.0"
repository = "https://github.com/villagekit/robokit"
readme = "../README.md"
keywords = ["robot", "firmware", "cnc", "machine", "automation"]
categories = ["no-std", "embedded", "science::robotics", ]

[dependencies]
defmt = "0.3"
embedded-hal = { version = "0.2", features = ["unproven"] }
fixed-map = { version = "0.8.2", default-features = false }
fugit = { version = "0.3", features = ["defmt"] }
fugit-timer = "0.1"
heapless = "0.7"
nb = "1"
num = { version = "0.4", default-features = false }
ramp-maker = { version = "0.2", features = ["libm"] }
rmodbus = { version = "0.7", default-features = false, features = ["heapless"] }
stepper = { version = "0.6", features = ["dq542ma"] }
